// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImpactedControlsModule view with Security Findings renders as expected 1`] = `
<div
  className="module-impacted-controls"
>
  <div
    className="card-container-container"
  >
    <div
      className="card-title-container"
    >
      <div
        className="card-title"
      >
        Most impacted controls
      </div>
      <div
        align="end"
        className="bx--tooltip-icon"
      >
        <button
          aria-label="This radar chart helps you to visualize problem areas. It shows you the highest number of impacts, and gives you a view into the areas where security and policy violations are overlapping and may be higher priority areas to investigate."
          className="bx--tooltip__trigger bx--tooltip--icon__top"
        >
          <svg
            className="info-icon"
          >
            <use
              href="#diagramIcons_info"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      className="card-container"
    >
      <div
        className="card-content"
      >
        <div
          className="card-controls"
        >
          <div
            className="card-legend"
          >
            <div
              className="key"
            >
              Key
            </div>
            <div
              className="legend-container"
            >
              <div
                className="legend policies"
              />
              Policy violations
            </div>
            <div
              className="legend-container"
            >
              <div
                className="legend findings"
              />
              Security findings
            </div>
          </div>
          <div
            className="card-control-panel"
          >
            <div
              className="card-selection"
            >
              <div
                className="card-selection-title"
              >
                Standard
              </div>
              <div
                aria-invalid={undefined}
                aria-label="Most impacted controls"
                className="bx--dropdown selection bx--list-box"
                data-invalid={undefined}
                onClick={[Function]}
                onKeyDown={[Function]}
                role="listbox"
                tabIndex={null}
              >
                <div
                  aria-expanded={false}
                  aria-haspopup={true}
                  aria-label="open menu"
                  className="bx--list-box__field"
                  data-toggle={true}
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="button"
                  tabIndex="0"
                  type="button"
                >
                  <span
                    className="bx--list-box__label"
                    htmlFor="downshift-0-input"
                  >
                    All
                  </span>
                  <div
                    className="bx--list-box__menu-icon"
                  >
                    <svg
                      alt="Open menu"
                      aria-label="Open menu"
                      className={undefined}
                      fill={undefined}
                      fillRule="evenodd"
                      focusable="false"
                      height="5"
                      name={undefined}
                      role="img"
                      style={undefined}
                      viewBox="0 0 10 5"
                      width="10"
                    >
                      <title>
                        Open menu
                      </title>
                      <path
                        d="M0 0l5 4.998L10 0z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="card-slider"
            >
              <div
                className="bx--form-item"
              >
                <label
                  className="bx--label"
                  htmlFor="slider"
                >
                  Show more or less controls
                </label>
                <div
                  className="bx--slider-container"
                >
                  <div
                    className="bx--slider"
                    onChange={[Function]}
                    onClick={[Function]}
                    onKeyPress={[Function]}
                    role="presentation"
                    tabIndex={-1}
                    value={0}
                  >
                    <div
                      aria-valuemax={0}
                      aria-valuemin={1}
                      aria-valuenow={0}
                      className="bx--slider__thumb"
                      id="slider"
                      onKeyDown={[Function]}
                      onMouseDown={[Function]}
                      onTouchStart={[Function]}
                      role="slider"
                      style={
                        Object {
                          "left": "0%",
                        }
                      }
                      tabIndex={0}
                    />
                    <div
                      className="bx--slider__track"
                    />
                    <div
                      className="bx--slider__filled-track"
                      style={
                        Object {
                          "transform": "translate(0%, -50%) scaleX(0)",
                        }
                      }
                    />
                    <input
                      className="bx--slider__input"
                      max={0}
                      min={1}
                      name="Show more or less controls"
                      onChange={[Function]}
                      required={undefined}
                      step={1}
                      type="hidden"
                      value={0}
                    />
                  </div>
                  <span
                    className="bx--slider__range-label"
                  >
                    1
                  </span>
                  <span
                    className="bx--slider__range-label"
                  >
                    0
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="card-radar-container"
        >
          <div
            className="card-radar"
          >
            <div>
              <div
                className="no-resource"
              >
                <img
                  alt="Your data visualizations cannot be displayed"
                  className="no-resource-icon"
                  src="undefined/graphics/no-impacted-controls-overlap.svg"
                />
                <div
                  className="no-resource-title"
                >
                  Your data visualizations cannot be displayed
                </div>
                <div
                  className="no-resource-detail"
                >
                  There are no controls that have both policy violations and security findings. You can try selecting different filters or clearing the current filters. The system will continue to monitor and display the visualization here.
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ImpactedControlsModule view without Security Findings renders as expected 1`] = `
<div
  className="module-impacted-controls"
>
  <div
    className="card-container-container"
  >
    <div
      className="card-title-container"
    >
      <div
        className="card-title"
      >
        Most impacted controls
      </div>
      <div
        align="end"
        className="bx--tooltip-icon"
      >
        <button
          aria-label="This radar chart helps you to visualize problem areas. It shows you the highest number of impacts, and gives you a view into the areas where security and policy violations are overlapping and may be higher priority areas to investigate."
          className="bx--tooltip__trigger bx--tooltip--icon__top"
        >
          <svg
            className="info-icon"
          >
            <use
              href="#diagramIcons_info"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      className="card-container"
    >
      <div
        className="card-content"
      >
        <div
          className="card-controls"
        >
          <div
            className="card-legend"
          >
            <div
              className="key"
            >
              Key
            </div>
            <div
              className="legend-container"
            >
              <div
                className="legend policies"
              />
              Policy violations
            </div>
          </div>
          <div
            className="card-control-panel"
          >
            <div
              className="card-selection"
            >
              <div
                className="card-selection-title"
              >
                Standard
              </div>
              <div
                aria-invalid={undefined}
                aria-label="Most impacted controls"
                className="bx--dropdown selection bx--list-box"
                data-invalid={undefined}
                onClick={[Function]}
                onKeyDown={[Function]}
                role="listbox"
                tabIndex={null}
              >
                <div
                  aria-expanded={false}
                  aria-haspopup={true}
                  aria-label="open menu"
                  className="bx--list-box__field"
                  data-toggle={true}
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="button"
                  tabIndex="0"
                  type="button"
                >
                  <span
                    className="bx--list-box__label"
                    htmlFor="downshift-1-input"
                  >
                    All
                  </span>
                  <div
                    className="bx--list-box__menu-icon"
                  >
                    <svg
                      alt="Open menu"
                      aria-label="Open menu"
                      className={undefined}
                      fill={undefined}
                      fillRule="evenodd"
                      focusable="false"
                      height="5"
                      name={undefined}
                      role="img"
                      style={undefined}
                      viewBox="0 0 10 5"
                      width="10"
                    >
                      <title>
                        Open menu
                      </title>
                      <path
                        d="M0 0l5 4.998L10 0z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="card-slider"
            >
              <div
                className="bx--form-item"
              >
                <label
                  className="bx--label"
                  htmlFor="slider"
                >
                  Show more or less controls
                </label>
                <div
                  className="bx--slider-container"
                >
                  <div
                    className="bx--slider"
                    onChange={[Function]}
                    onClick={[Function]}
                    onKeyPress={[Function]}
                    role="presentation"
                    tabIndex={-1}
                    value={3}
                  >
                    <div
                      aria-valuemax={3}
                      aria-valuemin={1}
                      aria-valuenow={3}
                      className="bx--slider__thumb"
                      id="slider"
                      onKeyDown={[Function]}
                      onMouseDown={[Function]}
                      onTouchStart={[Function]}
                      role="slider"
                      style={
                        Object {
                          "left": "0%",
                        }
                      }
                      tabIndex={0}
                    />
                    <div
                      className="bx--slider__track"
                    />
                    <div
                      className="bx--slider__filled-track"
                      style={
                        Object {
                          "transform": "translate(0%, -50%) scaleX(0)",
                        }
                      }
                    />
                    <input
                      className="bx--slider__input"
                      max={3}
                      min={1}
                      name="Show more or less controls"
                      onChange={[Function]}
                      required={undefined}
                      step={1}
                      type="hidden"
                      value={3}
                    />
                  </div>
                  <span
                    className="bx--slider__range-label"
                  >
                    1
                  </span>
                  <span
                    className="bx--slider__range-label"
                  >
                    3
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="card-radar-container"
        >
          <div
            className="card-radar"
          >
            <svg
              height={500}
              width={500}
            >
              <g
                transform="translate(70, 70)"
              >
                <rect
                  fill="transparent"
                  height={360}
                  transform="translate(0, 0)"
                  width={360}
                />
                <g
                  transform="translate(180, 180)"
                >
                  <g>
                    <circle
                      fill="#979797"
                      fillOpacity={0.1}
                      r={180}
                      stroke="#979797"
                    />
                    <circle
                      fill="#979797"
                      fillOpacity={0.1}
                      r={144}
                      stroke="#979797"
                    />
                    <circle
                      fill="#979797"
                      fillOpacity={0.1}
                      r={108}
                      stroke="#979797"
                    />
                    <circle
                      fill="#979797"
                      fillOpacity={0.1}
                      r={72}
                      stroke="#979797"
                    />
                    <circle
                      fill="#979797"
                      fillOpacity={0.1}
                      r={36}
                      stroke="#979797"
                    />
                    <text
                      dx="0.4em"
                      dy="0.4em"
                      fill="black"
                      fontFamily="sans-serif"
                      fontSize={10}
                      textAnchor="left"
                      x={0}
                      y={-180}
                    >
                      10
                    </text>
                    <text
                      dx="0.4em"
                      dy="0.4em"
                      fill="black"
                      fontFamily="sans-serif"
                      fontSize={10}
                      textAnchor="left"
                      x={0}
                      y={-144}
                    >
                      8
                    </text>
                    <text
                      dx="0.4em"
                      dy="0.4em"
                      fill="black"
                      fontFamily="sans-serif"
                      fontSize={10}
                      textAnchor="left"
                      x={0}
                      y={-108}
                    >
                      6
                    </text>
                    <text
                      dx="0.4em"
                      dy="0.4em"
                      fill="black"
                      fontFamily="sans-serif"
                      fontSize={10}
                      textAnchor="left"
                      x={0}
                      y={-72}
                    >
                      4
                    </text>
                    <text
                      dx="0.4em"
                      dy="0.4em"
                      fill="black"
                      fontFamily="sans-serif"
                      fontSize={10}
                      textAnchor="left"
                      x={0}
                      y={-36}
                    >
                      2
                    </text>
                  </g>
                  <g>
                    <line
                      stroke="#cdcdcd"
                      strokeWidth={2}
                      x1={0}
                      x2={1.2124003311558799e-14}
                      y1={0}
                      y2={-198.00000000000003}
                    />
                    <text
                      dy="0.35em"
                      fill="black"
                      fontFamily="sans-serif"
                      fontSize={10}
                      textAnchor="middle"
                      x={1.3226185430791415e-14}
                      y={-216}
                    >
                      Other
                    </text>
                  </g>
                  <g>
                    <line
                      stroke="#cdcdcd"
                      strokeWidth={2}
                      x1={0}
                      x2={171.47302994931889}
                      y1={0}
                      y2={98.99999999999999}
                    />
                    <text
                      dy="0.35em"
                      fill="black"
                      fontFamily="sans-serif"
                      fontSize={10}
                      textAnchor="middle"
                      x={187.06148721743875}
                      y={107.99999999999996}
                    >
                      Mutation Advisor
                    </text>
                  </g>
                  <g>
                    <line
                      stroke="#cdcdcd"
                      strokeWidth={2}
                      x1={0}
                      x2={-171.47302994931886}
                      y1={0}
                      y2={99.00000000000009}
                    />
                    <text
                      dy="0.35em"
                      fill="black"
                      fontFamily="sans-serif"
                      fontSize={10}
                      textAnchor="middle"
                      x={-187.06148721743872}
                      y={108.00000000000007}
                    >
                      VA
                    </text>
                  </g>
                  <g>
                    <path
                      d="M46.765374568975716,26.999995211544C41.569222760628364,35.99999627564524,-23.382681755254815,28.50000558653143,-31.176910850084102,18.00000638460743C-38.97113994491339,7.500007182683431,-12.990380903176636,-37.499998137822764,0,-36C12.990380903176636,-34.500001862177236,51.96152637732307,17.999994147442763,46.765374568975716,26.999995211544"
                      fill="#0082C1"
                      fillOpacity={0.2}
                      stroke="#0082C1"
                      strokeOpacity={0.7}
                    />
                    <circle
                      cx={2.204364238465236e-15}
                      cy={-36}
                      fill="#0082C1"
                      opacity={0.7}
                      r={3}
                      stroke="#0082C1"
                    />
                    <circle
                      cx={46.76537180435969}
                      cy={26.99999999999999}
                      fill="#0082C1"
                      opacity={0.7}
                      r={3}
                      stroke="#0082C1"
                    />
                    <circle
                      cx={-31.176914536239785}
                      cy={18.00000000000001}
                      fill="#0082C1"
                      opacity={0.7}
                      r={3}
                      stroke="#0082C1"
                    />
                  </g>
                  <g>
                    <path
                      d="M0,0C0,0,0,0,0,0C0,0,0,0,0,0C0,0,0,0,0,0"
                      fill="#13B9B9"
                      fillOpacity={0.2}
                      stroke="#13B9B9"
                      strokeOpacity={0.7}
                    />
                    <circle
                      cx={0}
                      cy={-0}
                      fill="#13B9B9"
                      opacity={0.7}
                      r={3}
                      stroke="#13B9B9"
                    />
                    <circle
                      cx={0}
                      cy={0}
                      fill="#13B9B9"
                      opacity={0.7}
                      r={3}
                      stroke="#13B9B9"
                    />
                    <circle
                      cx={-0}
                      cy={0}
                      fill="#13B9B9"
                      opacity={0.7}
                      r={3}
                      stroke="#13B9B9"
                    />
                  </g>
                </g>
              </g>
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
